# fanbient

./: .envrc  @gemini_audit_plan.md  README.md  SEEDS.md  fanbient.py  gemini_audit.md  gemini_audit_plan.md  main.py  pyproject.toml
docs/: architecture.md  hardware.md  mqtt-schema.md
fanbient/: __init__.py  api.py  cli.py  config.py  service.py
fanbient/audio/: capture.py  classifier.py
fanbient/control/: state_machine.py
fanbient/mqtt/: client.py
fanbient/sensors/: temperature.py
plans/: modular-napping-brooks.md
tests/: test_classifier.py  test_config.py  test_state_machine.py  test_temperature.py
